samples/_failures_safe/1761173800_218741_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2cb806c.c: In function ‘print_state’:
./samples/SAFE/__tmp_e2cb806c.c:158:9: error: expected expression at end of input
  158 |         "IDLE", "READY", "PROCESSING", "COMPLETE",
      |         ^~~~~~
./samples/SAFE/__tmp_e2cb806c.c:158:9: error: expected declaration or statement at end of input
